# deception_RL

./: =0.4.5  README.md  main.py  players.py  pyproject.toml  test.py
archive/: players.py
archive/example_2048/: README.md  config.py  requirements.txt  test_thinking.py  train_modal.py
archive/example_2048/configs/: train_default.yaml
example_2048/: __init__.py  rollout.py  train_modal.py
frontend/: app.js  index.html  server.py  styles.css
rl/: utils.py
src/: env.py  main.py  models.py
src/agent/: __init__.py  agent_registry.py  base_agent.py  openai_agent.py
src/engine/: deck.py  engine.py  engine_api.py  external_agent_response_parser.py  prompts.py  protocol.py
src/inference/: inter_reason.py  main.py
src/inference/experiments/: main.py  nothink.py  old.py  seven.py
src/model_converters/: __init__.py  base_model_converter_factory.py  factory_registry.py  model_converter_protocols.py
src/model_converters/generic/: agent_response_to_question_tool_converter.py  ask_agent_if_wants_to_speak_tool_converter.py  chancellor_play_policy_tool_converter.py  choose_agent_to_vote_out_tool_converter.py  president_choose_card_to_discard_tool_converter.py  president_pick_chancellor_tool_converter.py  vote_chancellor_yes_no_tool_converter.py
src/model_converters/openai/: assistant_response_converter.py  model_converter_factory.py  tool_call_converter.py  tool_feedback_converter.py  tool_result_converter.py  (+1 more)
src/rl_training/: config.py  metrics_utils.py  rollout.py  train_modal.py  utils.py
src/tools/: __init__.py  openai.py  tools.py
(+7 files in other folders)
