[project]
name = "rl-secret-hitler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "modal>=1.2.1",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "omegaconf>=2.3.0",
    "openpipe-art>=0.4.5",
    "polars>=1.35.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "torch>=2.9.0",
]
